# Wordy_back

./: Cargo.toml
.sqlx/: query-e5306288024a97eb26dd74475390dfec2606c830823ca51443b91925cb6f3410.json
src/: main.rs
src/api/handlers/: mod.rs  translate_handlers.rs  user_handlers.rs  word_pair_handlers.rs
src/api/models/: mod.rs  translate.rs  user.rs  word_pair.rs
src/application/services/: translate_service.rs  user_service.rs  word_pair_service.rs
src/domain/models/: translate.rs  user.rs  word_pair.rs
src/domain/traits/repositories/: user_repository.rs  word_pair_repository.rs
src/handlers/: mod.rs  user_handlers.rs  word_pair_handlers.rs
src/infrastructure/external_api/translate/: translate.rs
src/infrastructure/storage/database/repositories/: user_repository.rs  word_pair_repository.rs
src/models/: user.rs  word_pair.rs
src/repositories/: repository.rs  user_repository.rs  word_pair_repository.rs
src/services/: mod.rs  user_service.rs  word_pair_service.rs
src/translate/: translate.rs
