[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
dotenv = "0.15.0"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
